--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+*::before, *::after {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font: 16px Helvetica, sans-serif;
     line-height: 24px;
